fix(layout): adjust body and root heights
Update the body height to dynamically conform to its content, and set
the root container height to 100% of the body. This resolves unexpected
layout overflows.

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ body {
   line-height: 1.5;
   /* 5. Improve text rendering */
   -webkit-font-smoothing: antialiased;
-  max-height: 100vh;
+  min-height: 100vh;
   background: linear-gradient(
     180deg,
     rgba(209, 220, 221, 1) 0%,
@@ -86,7 +86,6 @@ h6 {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100vh;
-
+  height: 100%;
   padding: 20px;
 }
